--- a/_sass/color_schemes/bnp2024.scss
+++ b/_sass/color_schemes/bnp2024.scss
@@ -1,6 +1,6 @@
-@import "./color_schemes/light";
+//@import "./color_schemes/light";
 $sidebar-color: #C14633 !default;
-@import "./vendor/OneLightJekyll/syntax";
+//@import "./vendor/OneLightJekyll/syntax";
 
 
 //$color-scheme: light !default;
