--- a/_sass/color_schemes/bnp2024.scss
+++ b/_sass/color_schemes/bnp2024.scss
@@ -1,2 +1,4 @@
 /* $sidebar-color: #C14633; */
-$sidebar-color: #eab6ae;
+/* $sidebar-color: #eab6ae; */
+$sidebar-color: #FFFFFF;
+$link-color: #C14633;
