--- a/_sass/color_schemes/bnp2024.scss
+++ b/_sass/color_schemes/bnp2024.scss
@@ -2,6 +2,6 @@
 /* $sidebar-color: #eab6ae; */
 $sidebar-color: #FFFFFF;
 $link-color: #C14633;
-a.nav-link-list.active {
+li.nav-link-list.active {
   background-color: #eab6ae;
 }
