--- a/_sass/color_schemes/bnp2024.scss
+++ b/_sass/color_schemes/bnp2024.scss
@@ -3,5 +3,6 @@
 $sidebar-color: #FFFFFF;
 $link-color: #C14633;
 li.nav-list-item.active {
-  background-color: #eab6ae;
+  background-color: #FFFFFF;
+  color: #eab6ae;
 }
