--- a/_sass/color_schemes/bnp2024.scss
+++ b/_sass/color_schemes/bnp2024.scss
@@ -2,7 +2,9 @@
 /* $sidebar-color: #eab6ae; */
 $sidebar-color: #FFFFFF;
 $link-color: #C14633;
-li.nav-list-item.active {
+/*li.nav-list-item.active {
   background-color: #FFFFFF;
   color: #eab6ae;
-}
+}*/
+.nav-list .nav-list-item .nav-list-link.active {
+    background-image: linear-gradient(-90deg, #ebedf5 0%, rgba(234, 182, 174, 0.8) 80%, rgba(234, 182, 174, 0) 100%);
