--- a/_sass/color_schemes/bnp2024.scss
+++ b/_sass/color_schemes/bnp2024.scss
@@ -8,3 +8,4 @@ $link-color: #C14633;
 }*/
 .nav-list .nav-list-item .nav-list-link.active {
     background-image: linear-gradient(-90deg, #ebedf5 0%, rgba(234, 182, 174, 0.8) 80%, rgba(234, 182, 174, 0) 100%);
+}
